--- a/src/index.css
+++ b/src/index.css
@@ -45,17 +45,19 @@
     --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     --color-red-500: oklch(.637 .237 25.331);
-    --color-yellow-50: oklch(.987 .026 102.212);
-    --color-yellow-200: oklch(.945 .129 101.54);
-    --color-yellow-400: oklch(.852 .199 91.936);
-    --color-yellow-500: oklch(.795 .184 86.047);
-    --color-yellow-600: oklch(.681 .162 75.834);
-    --color-yellow-900: oklch(.421 .095 57.708);
-    --color-cyan-50: oklch(.984 .019 200.873);
-    --color-cyan-100: oklch(.956 .045 203.388);
-    --color-cyan-200: oklch(.917 .08 205.041);
-    --color-cyan-500: oklch(.715 .143 215.221);
-    --color-cyan-600: oklch(.609 .126 221.723);
+    --color-yellow-50: #FDF8E5;
+    --color-yellow-100: #FBF3C8;
+    --color-yellow-200: #F8EBB3;
+    --color-yellow-400: #F2D766;
+    --color-yellow-500: #ECC625;
+    --color-yellow-600: #C9A81F;
+    --color-yellow-700: #B79613;
+    --color-yellow-900: #826D14;
+    --color-cyan-50: #E6F1F2;
+    --color-cyan-100: #CCE4E6;
+    --color-cyan-200: #A6CFD3;
+    --color-cyan-500: #007782;
+    --color-cyan-600: #00656E;
     --color-gray-50: oklch(.985 .002 247.839);
     --color-gray-100: oklch(.967 .003 264.542);
     --color-gray-200: oklch(.928 .006 264.531);
@@ -859,8 +861,34 @@
     background-color: var(--color-yellow-50);
   }
 
+  .bg-yellow-100 {
+    background-color: var(--color-yellow-100);
+  }
+
   .bg-yellow-400 {
     background-color: var(--color-yellow-400);
+  }
+
+  .bg-yellow-500 {
+    background-color: var(--color-yellow-500);
+  }
+
+  .bg-yellow-700 {
+    background-color: var(--color-yellow-700);
+  }
+
+  .bg-gradient-to-br {
+    background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+  }
+
+  .from-yellow-50 {
+    --tw-gradient-from: var(--color-yellow-50);
+    --tw-gradient-to: rgb(0 0 0 / 0);
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  }
+
+  .to-yellow-100 {
+    --tw-gradient-to: var(--color-yellow-100);
   }
 
   .p-1 {
@@ -1042,8 +1070,16 @@
     color: var(--color-yellow-400);
   }
 
+  .text-yellow-500 {
+    color: var(--color-yellow-500);
+  }
+
   .text-yellow-600 {
     color: var(--color-yellow-600);
+  }
+
+  .text-yellow-700 {
+    color: var(--color-yellow-700);
   }
 
   .text-yellow-900 {
